# railroad-think

./: .git-blame-ignore-revs  .gitignore  Cargo.toml  README.md  criterion.toml  data.sqlite  deploy.sh  index.html  integration.config.json  package.json  pyproject.toml  svelte.config.js  tsconfig.json  vite.config.js
analysis/: scatter.ipynb
config/: heuristics-0-0.json  heuristics-0-16.json  heuristics-0-256.json  heuristics-0-4.json  heuristics-0-64.json  heuristics-0.json  heuristics-1000-0.json  heuristics-1000-16.json  heuristics-1000-256.json  heuristics-1000-4.json  heuristics-1000-64.json  heuristics-12.json  heuristics-16.json  heuristics-20-0.json  heuristics-20-16.json  heuristics-20-256.json  heuristics-20-4.json  heuristics-20-64.json  heuristics-20.json  heuristics-200-0.json  heuristics-200-16.json  heuristics-200-256.json  heuristics-200-4.json  heuristics-200-64.json  heuristics-4.json  heuristics-8.json  heuristics-80-0.json  heuristics-80-16.json  heuristics-80-256.json  heuristics-80-4.json  heuristics-80-64.json  heuristics-alpha-0.json  heuristics-alpha-1.json  heuristics-alpha-16.json  heuristics-alpha-2.json  heuristics-alpha-32.json  heuristics-alpha-4.json  heuristics-alpha-64.json  heuristics-alpha-8.json  heuristics-unexplored-0.json  (+4 more)
custom-plugins/: json.js
data/: data.csv  dynamic-rave-post-lint-iterations.csv  dynamic-rave-post-lint.csv  exp_v2.csv  exploration_value_1.csv  local_rave.csv  rave_exploration_biases.csv  rave_exploration_biases_2.csv  rave_exploration_biases_3.csv  rave_exploration_biases_4.csv  rave_values_1.csv  tree_reuse.csv
src/: identity_hasher.rs  lib.rs
src/assets/: colors.json  colors.ts  global.css  profile.css  variables.css.ts
src/board/: direction.rs  mod.rs  square.rs
src/components/: Board.svelte  BoardEncoding.svelte  BoardRenderer.svelte  Button.svelte  Candidates.svelte  Dropdown.svelte  Encoding.svelte  Game.svelte  Placements.svelte  Section.svelte  Select.svelte  Suggest.svelte  TabbedSection.svelte  VisibleGrid.svelte
src/controllers/: board_controller.rs  game_controller.rs  mod.rs
src/data/: exits.csv  pieces.csv  pieces.csv.d.ts
src/game/: mod.rs  mv.rs
src/lib/: Dropdown.svelte  Error.svelte  ErrorBoundary.ts  Section.svelte  TabbedSection.svelte  (+1 more)
static/: .htaccess
(+121 files in other folders)
