[tool.poetry]
name = "railroad-think"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "railroad_think"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.1.1"
pandas = "^2.2.0"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
numpy = "^1.26.4"
tqdm = "^4.66.2"
pyarrow = "^15.0.0"
statsmodels = "^0.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
